# webDependencyFetcherAPI

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  app.py  compose.yaml  pyproject.toml
url_dependencies/: data.py  dependencies.py  url.py
